# advent_of_code_2020

./: Cargo.toml  README.md  enable_day.sh  index.html  search-index.js  settings.html  source-files.js
day01/: Cargo.toml  all.html  fn.parse_input.html  index.html  sidebar-items.js  static.PUZZLE_INPUT.html  struct.Day01Entry.html  trait.AoC.html  trait.Context.html  type.Result.html
day02/: Cargo.toml  all.html  fn.parse_input.html  index.html  sidebar-items.js  static.PUZZLE_INPUT.html  struct.Day02Entry.html  trait.AoC.html  trait.Context.html  type.Result.html
day03/: Cargo.toml  all.html  enum.ForestSquare.html  fn.parse_input.html  index.html  sidebar-items.js  static.PUZZLE_INPUT.html  struct.ForestLine.html  trait.AoC.html  trait.Context.html  type.Result.html
day04/: Cargo.toml  all.html  fn.parse_input.html  index.html  sidebar-items.js  static.PUZZLE_INPUT.html  struct.BirthYear.html  struct.CountryId.html  struct.ExpirationYear.html  struct.EyeColor.html  struct.HairColor.html  struct.Height.html  struct.IssueYear.html  struct.PassportBuilder.html  struct.PassportId.html  trait.AoC.html  trait.Context.html  type.Result.html
day05/: Cargo.toml  all.html  enum.DirectionColumn.html  enum.DirectionRow.html  fn.parse_input.html  index.html  sidebar-items.js  static.PUZZLE_INPUT.html  struct.Day05Entry.html  struct.Direction.html  struct.DirectionColumnIterator.html  struct.DirectionRowIterator.html  trait.AoC.html  trait.Context.html  type.Result.html
template/: Cargo.toml
template/benches/: aoc_benchmark.rs
template/src/: initial.rs  lib.rs
(+254 files in other folders)
