[package]
name = "dayXX"
version = "0.1.0"
authors = ["Nicolas Bigaouette <nbigaouette@gmail.com>"]
edition = "2018"

[dependencies]
# log = "0.4"
anyhow = "1.0"
shrinkwraprs = "0.2"

[dev-dependencies]
pretty_assertions = "0.6"
criterion = "0.3"
env_logger = "0.7"

[[bench]]
name = "aoc_benchmark"
harness = false
